fix display issues on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h1 {
 .question {
   font-size: 30px;
   font-weight: 500;
+  color: black;
 }
 
 .question-count {
